k8s/01-church-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: church-dashboard
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: church-dashboard
  template:
    metadata:
      labels:
        app: church-dashboard
    spec:
      containers:
        - name: church-dashboard
          image: uhub.service.ucloud.cn/entropypool/church-dashboard:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: church-dashboard
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 80
      targetPort: 80
  selector:
    app: church-dashboard
