k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ohash-dashboard-treafik-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: ohash-dashboard-treafik
    k8s.kuboard.cn/workload: ohash-dashboard-treafik
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-http-redirect-https@kubernetescrd,
                                                      kube-system-http-redirect-https-testing@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - dashboard.ohhash.com
      secretName: ohhash-com-cert
  rules:
    - host: dashboard.ohhash.com
      http:
        paths:
          - path: /
            backend:
              serviceName: ohash-dashboard
              servicePort: 80
