k8s/03-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: procyon-dashboard-nginx-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: procyon-dashboard-nginx
    k8s.kuboard.cn/workload: procyon-dashboard-nginx
    kubernetes.io/ingress.class: "devops-vpn-nginx-internal"
    nginx.com/sticky-cookie-services: "serviceName=kuboard srv_id expires=1h path=/"

spec:
  rules:
    - host: dashboard.procyon.vip
      http: &http_rules
        paths:
          - path: /
            backend:
              serviceName: procyon-dashboard
              servicePort: 80
